--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Frontend Mentor | Social links profile</title>
-  <link rel="stylesheet" href="estilos/style.css">
-  <link rel="stylesheet" href="estilos/tablet.css">
-  <link rel="stylesheet" href="estilos/desktop.css">
+  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+  <link rel="stylesheet" href="estilos/style.css" media="all">
+  <link rel="stylesheet" href="estilos/tablet-desktop.css">
 </head>
-<body>
-  
+<body> 
   <div id="conteiner">
       <div id="filho">
         <img src="images/avatar-jessica.jpeg" alt="foto de perfil">
         <h1>Jessica Randall</h1>
-        <p id="verd">London, United Kingdom</p>
+        <p id="verde">London, United Kingdom</p>
         <p>"Front-end developer and avid reader."</p>
         <nav>
-          <a href="">GitHub</a>
-          <a href="">Frontend Mentor</a>
-          <a href="">LinkedIn</a>
-          <a href="">Twitter</a>
-          <a href="">Instagram</a>
+          <a href="#">GitHub</a>
+          <a href="#">Frontend Mentor</a>
+          <a href="#">LinkedIn</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
         </nav>
       </div>
   </div>  
-  
-
 </body>
 </html>
